--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\20191815\\.conda\\envs\\tf-cpu\\python.exe"
+    "python.pythonPath": "C:\\Users\\20191815\\.virtualenvs\\DBL-WebApp-5qREQ5Aw\\Scripts\\python.exe"
 }
